# video_trim

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
src/video_trim/: __init__.py  cli.py  gui.py
tests/: test_cli.py  test_convert_directory.py
video_trim/: __init__.py  __main__.py  cli.py  gui.py
