[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "video_trim"
version = "0.1.0"
description = "Trim video using ffmpeg"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
video-trim = "video_trim.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
